--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,7 @@ djangorestframework
 djangorestframework-simplejwt
 django-cors-headers
 pillow
+gunicorn
+whitenoise
+psycopg2-binary
+dj-database-url
